# BackInc-CPlusPLus

./: .gitignore  CMakeLists.txt  run.sh
database/schema/: 001_dbinit.sql  002_country.sql  003_cities.sql  004_currencies.sql  005_clients-temp.sql
src/: CMakeLists.txt  DatabaseManager.cpp  DatabaseManager.h  database_app  main.cpp
src/controllers/: CountryController.cpp  CountryController.h
src/models/: Country.h
src/services/: CountryService.cpp  CountryService.h
